[package]
name = "chrustos"
version = "0.1.0"
authors = ["Piotr <siuszko@zoho.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.19"
x86_64 = "0.14.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
build-command = ["build"]

run-command = [
  "qemu-system-x86_64", "-drive", "format=raw,file={}"
]
