[package]
name = "chrustos"
version = "0.1.0"
authors = ["Piotr <siuszko@zoho.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.19"
x86_64 = "0.14.6"
spin = "0.9.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
build-command = ["build"]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"]
run-command = [
  "qemu-system-x86_64", "-drive", "format=raw,file={}"
]
test-success-exit-code = 33 # (0x10 << 1) | 1